# rs-grid

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO-EXTRACTION-RESUME.md  Justfile  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  Trunk.toml  rustfmt.toml  skills-lock.json
.cargo/: audit.toml
.claude/: launch.json  settings.json  settings.local.json
.claude/commands/: e2e.md  test.md
.claude/skills/.claude-plugin/: marketplace.json
.claude/skills/coverage/: SKILL.md
.claude/skills/mintlify/: SKILL.md
.claude/skills/publishing-astro-websites/: SKILL.md
.codex/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  coverage.yml  csp.yml  docs.yml  pages.yml  release.yml
crates/rs-grid-core/: CLAUDE.md  Cargo.toml
crates/rs-grid-core/benches/: hit_test.rs  init.rs  sort.rs
crates/rs-grid-core/examples/: mem_per_row.rs
crates/rs-grid-core/src/: column.rs  commands.rs  datasource.rs  edit.rs  format.rs  hit_test.rs  lib.rs  model.rs  page_cache.rs  row.rs  scrollbar.rs  search.rs  selection.rs  sort.rs  state.rs  undo.rs  viewport.rs
crates/rs-grid-core/src/state/: cmd_clipboard.rs  cmd_column.rs  cmd_edit.rs  cmd_meta.rs  cmd_scroll.rs  cmd_search.rs  cmd_selection.rs  cmd_sort_filter.rs  cmd_undo.rs
crates/rs-grid-dioxus/: CLAUDE.md  Cargo.toml
crates/rs-grid-dioxus/src/: lib.rs
crates/rs-grid-flags/: Cargo.toml  build.rs
crates/rs-grid-flags/src/: lib.rs
crates/rs-grid-icons/: CLAUDE.md  Cargo.toml  build.rs
crates/rs-grid-icons/src/: lib.rs
crates/rs-grid-leptos/: CLAUDE.md  Cargo.toml
crates/rs-grid-leptos/src/: lib.rs
crates/rs-grid-render-canvas/: CLAUDE.md  Cargo.toml
crates/rs-grid-render-canvas/src/: lib.rs  renderer.rs
crates/rs-grid-scene/: CLAUDE.md  Cargo.toml
crates/rs-grid-scene/benches/: scene_builder.rs  scroll_frame.rs
crates/rs-grid-scene/src/: builder.rs  class_map.rs  class_map_data.rs  frame.rs  lib.rs  primitives.rs  theme.rs
crates/rs-grid-scene/src/builder/: cells.rs  scrollbars.rs
crates/rs-grid-web/: CLAUDE.md  Cargo.toml
crates/rs-grid-web/src/: canvas.rs  css_theme.rs  lib.rs  locale.rs
crates/rs-grid-web/src/canvas/: animation.rs  clipboard.rs  context_menu.rs  context_menu_config.rs  dispatch.rs  dom_helpers.rs  edit.rs  events.rs  fetcher.rs  hittest.rs  keyboard.rs  mod.rs  scroll.rs  search.rs
crates/rs-grid-web/src/locale/: ar.toml  de.toml  en.toml  es.toml  fr.toml  it.toml  ja.toml  ko.toml  mod.rs  nl.toml  pl.toml  pt.toml  ru.toml  tr.toml  uk.toml  zh.toml
crates/rs-grid-yew/: CLAUDE.md  Cargo.toml
crates/rs-grid-yew/src/: lib.rs
docs/: RUSTDOC_HISTORY.md  docs.json  getting-started.mdx  index.mdx  installation.mdx  row-count-limits.md  skill.md
docs/api/: column-def.mdx  grid-command.mdx  grid-model.mdx  scene-primitive.mdx
docs/concepts/: architecture.mdx  selection.mdx  viewport.mdx
docs/data/: fn-datasource.mdx  overview.mdx
docs/deployment/: docker.mdx
docs/development/: testing.mdx  workspace.mdx
docs/features/: context-menu.mdx  filtering.mdx  hit-testing.mdx  rows.mdx  sorting.mdx
docs/integrations/: dioxus.mdx  leptos.mdx  vanilla-js.mdx  yew.mdx
docs/scene/: primitives.mdx
docs/theming/: built-in-themes.mdx  css-variables.mdx  overview.mdx
e2e/: .gitignore  csp-server.js  package-lock.json  package.json  playwright.config.ts  playwright.csp.config.ts
e2e/fixture-leptos/: Cargo.toml  Trunk.toml  index.html
e2e/fixture-leptos/src/: lib.rs
e2e/tests/: csp.spec.ts  editing.spec.ts  grid.spec.ts  leptos-component.spec.ts  sort-limit.spec.ts
examples/: README.md
examples/_template-wasm/: Cargo.toml.tmpl  build.rs.tmpl  index.html.tmpl  main.js.tmpl
examples/_template-wasm/src/: lib.rs.tmpl
examples/basic-dioxus/: Cargo.toml  Trunk.toml  index.html
examples/basic-dioxus/src/: lib.rs
examples/basic-js/: Cargo.toml  build.rs  index.html  main.js
examples/basic-js/src/: fake_data.rs  lib.rs
examples/basic-leptos/: CLAUDE.md  Cargo.toml  Trunk.toml  build.rs  index.html  input.css  package-lock.json  package.json  rs-grid-theme.css
examples/basic-leptos/scripts/: build-css.mjs  generate_class_map.mjs
examples/basic-leptos/src/: fake_data.rs  input.css  lib.rs
examples/basic-react/: index.html  package-lock.json  package.json  vite.config.ts
examples/basic-react/src/: App.tsx  main.tsx
examples/basic-web/: Cargo.toml  Trunk.toml  index.html
examples/basic-web/src/: lib.rs
examples/basic-yew/: Cargo.toml  Trunk.toml  build.rs  index.html
examples/basic-yew/src/: lib.rs
examples/example-common/: Cargo.toml
examples/example-common/src/: class_map.rs  class_map_data.rs  fake_data.rs  lib.rs
examples/example-common/themes/: base.css  dark.css  dimmed.css  light.css  material-dark.css  material.css
mcp/: package-lock.json  package.json  tsconfig.json
mcp/scripts/: copy-docs.mjs
mcp/src/: index.ts  paths.ts  search.ts
site/: Dockerfile  astro.config.mjs  i18n.json  nginx.conf  package-lock.json  package.json  rspress.config.ts
site/.astro/: data-store.json  settings.json
site/doc_build/: 404.html  docs-overview.html  docs-overview.md  getting-started.html  getting-started.md  index.html  index.md  installation.html  installation.md  llms-full.txt  llms.txt  nav-scroll.js  row-count-limits.html
site/doc_build/api/: column-def.html  column-def.md  grid-command.html  grid-command.md  grid-model.html  grid-model.md  grid-state.html  scene-primitive.html  scene-primitive.md  theme.html
site/doc_build/concepts/: architecture.html  data-model.html  grid-state.html  selection.html  viewport.html
site/doc_build/data/: extracting-data.html  extracting-data.md  fn-datasource.html  overview.html  overview.md  page-cache.html  vec-datasource.html
site/doc_build/deployment/: docker.html
site/doc_build/development/: testing.html  workspace.html
site/theme/: index.css  index.tsx
tools/class-map/: generate_class_map.mjs  package-lock.json  package.json
(+427 files in other folders)
