[workspace]
members = [
  "crates/rs-grid-core",
  "crates/rs-grid-scene",
  "crates/rs-grid-render-canvas",
  "crates/rs-grid-web",
  "crates/rs-grid-leptos",
  "examples/basic-leptos",
]
resolver = "2"

[workspace.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace.dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "MouseEvent",
  "WheelEvent",
  "DomRect",
  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "KeyboardEvent",
  "Navigator",
  "Clipboard",
  "HtmlTextAreaElement",
  "HtmlBodyElement",
  "console",
  "ClipboardEvent",
  "DataTransfer",
  "CssStyleDeclaration",
  "HtmlElement",
  "Node",
]
version = "0.3"
