[workspace]
members = [
  "crates/rs-grid-core",
  "crates/rs-grid-scene",
  "crates/rs-grid-render-canvas",
  "crates/rs-grid-web",
  "crates/rs-grid-leptos",
  "crates/rs-grid-dioxus",
  "crates/rs-grid-yew",
  "crates/rs-grid-icons",
  "examples/example-common",
  "e2e/fixture-leptos",
]
resolver = "2"

# Shared package metadata inherited by the library crates via
# `<field>.workspace = true`. Keeps license/repository/version in one place.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ruxelion/rs-grid"
publish = false

[workspace.lints.rust]
# cfg(coverage) is set by cargo-llvm-cov during instrumented builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace.dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "HtmlDocument",
  "Element",
  "EventTarget",
  "MouseEvent",
  "MouseEventInit",
  "WheelEvent",
  "DomRect",
  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "KeyboardEvent",
  "Navigator",
  "Clipboard",
  "HtmlTextAreaElement",
  "HtmlBodyElement",
  "console",
  "ClipboardEvent",
  "DataTransfer",
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlImageElement",
  "AddEventListenerOptions",
  "Node",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "UiEvent",
  "FocusEvent",
  "FileList",
  "File",
  "FileReader",
  "Storage",
  "TextMetrics",
]
version = "0.3"
