[package]
name = "rs-grid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Headless grid engine core: model, viewport, selection, hit-testing"

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hit_test"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "init"
harness = false

[dependencies]
