[package]
name = "rs-grid-dioxus"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dioxus CSR component wrapper for rs-grid"

[dependencies]
rs-grid-core  = { path = "../rs-grid-core" }
rs-grid-scene = { path = "../rs-grid-scene" }
rs-grid-web   = { path = "../rs-grid-web" }
dioxus        = { version = "0.7", features = ["web"] }
wasm-bindgen  = { workspace = true }
web-sys       = { workspace = true }
