[package]
name = "rs-grid-dioxus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Dioxus CSR component wrapper for rs-grid"

[dependencies]
rs-grid-core  = { path = "../rs-grid-core" }
rs-grid-scene = { path = "../rs-grid-scene" }
rs-grid-web   = { path = "../rs-grid-web" }
dioxus        = { version = "0.7", features = ["web"] }
wasm-bindgen  = { workspace = true }
web-sys       = { workspace = true }
