[package]
name = "rs-grid-leptos"
version = "0.1.0"
edition = "2021"
description = "Leptos component wrapper for rs-grid"

[dependencies]
rs-grid-core  = { path = "../rs-grid-core" }
rs-grid-scene = { path = "../rs-grid-scene" }
rs-grid-web   = { path = "../rs-grid-web" }
leptos = { version = "0.8", features = ["csr"] }
send_wrapper = "0.6"
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
