[package]
name = "rs-grid-render-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Canvas2D renderer: converts SceneFrame into CanvasRenderingContext2d calls"

[dependencies]
rs-grid-scene = { path = "../rs-grid-scene" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
