[package]
name = "rs-grid-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Scene graph: converts GridState into renderer-agnostic primitives"

[dependencies]
rs-grid-core = { path = "../rs-grid-core" }

[[bin]]
name = "generate-theme"
path = "src/bin/generate_theme.rs"
