[package]
name = "rs-grid-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Scene graph: converts GridState into renderer-agnostic primitives"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scene_builder"
harness = false

[[bench]]
name = "scroll_frame"
harness = false

[dependencies]
rs-grid-core = { path = "../rs-grid-core" }

[[bin]]
name = "generate-theme"
path = "src/bin/generate_theme.rs"
