[package]
name = "rs-grid-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Browser event handling, canvas sizing, and rAF loop for rs-grid"

[dependencies]
rs-grid-core = { path = "../rs-grid-core" }
rs-grid-scene = { path = "../rs-grid-scene" }
rs-grid-render-canvas = { path = "../rs-grid-render-canvas" }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
