[package]
name = "rs-grid-yew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Yew CSR component wrapper for rs-grid"

[dependencies]
rs-grid-core  = { path = "../rs-grid-core" }
rs-grid-scene = { path = "../rs-grid-scene" }
rs-grid-web   = { path = "../rs-grid-web" }
yew           = { version = "0.23", features = ["csr"] }
wasm-bindgen  = { workspace = true }
web-sys       = { workspace = true }
