[package]
name = "basic-dioxus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-grid-core             = { path = "../../crates/rs-grid-core" }
rs-grid-web              = { path = "../../crates/rs-grid-web" }
example-common           = { path = "../example-common" }
dioxus                   = { version = "0.7", features = ["web"] }
wasm-bindgen             = { workspace = true }
web-sys                  = { workspace = true }
js-sys                   = { workspace = true }
console_error_panic_hook = { workspace = true }
