[package]
name = "basic-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-grid-core   = { path = "../../crates/rs-grid-core" }
rs-grid-scene  = { path = "../../crates/rs-grid-scene" }
rs-grid-leptos = { path = "../../crates/rs-grid-leptos" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
send_wrapper = "0.6"
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }
