[package]
name = "basic-leptos"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-grid-scene  = { path = "../../crates/rs-grid-scene" }
rs-grid-leptos = { path = "../../crates/rs-grid-leptos" }
example-common = { path = "../example-common" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
send_wrapper = "0.6"
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }
