[package]
name = "basic-yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-grid-core             = { path = "../../crates/rs-grid-core" }
rs-grid-web              = { path = "../../crates/rs-grid-web" }
rs-grid-yew              = { path = "../../crates/rs-grid-yew" }
example-common           = { path = "../example-common" }
yew                      = { version = "0.23", features = ["csr"] }
wasm-bindgen             = { workspace = true }
web-sys                  = { workspace = true }
js-sys                   = { workspace = true }
console_error_panic_hook = { workspace = true }
