[package]
name = "example-common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rs-grid-core  = { path = "../../crates/rs-grid-core" }
rs-grid-icons = { path = "../../crates/rs-grid-icons" }
rs-grid-scene = { path = "../../crates/rs-grid-scene" }

[[bin]]
name = "generate-theme"
path = "src/bin/generate_theme.rs"
